quick spacing fix

--- a/src/pages/GameDetailsPage/GameDetails.css
+++ b/src/pages/GameDetailsPage/GameDetails.css
@@ -110,7 +110,9 @@
 }
 
 .list-button {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 @media (max-width: 768px) {
